**2013 Mar 19**
merged branch apriori
merged branch generalize_matedata_table
merged branch database_operations

**2013 Mar 18**
Fixed Bug : Removing metadata tags when file removed from kwest

**2013 Mar 15**
Added Apriori Implementation: Show tag suggestions while browsing
Added module for Database Consistency

**2013 Mar 14**
refactor(generalize) apriori to allow extendibility in use
fixed major apriori memory leaks, invalid reads, invalid writes
optimize apriori for memory allocation/deallocation

**2013 Mar 12**
Set limit for rules generation in apriori
Set boundary conditions to check string length in apriori
Fixed some apriori memory leaks
refactor apriori code

**2013 Mar 11**
generalize database structure for plugin architecture

**2013 Mar 06**
merged branch copy/mpove
updated branch to current functions

**2013 Mar 05**
added .gitignore
added Doxygen documentation

**2013 Mar 03**
merged branch apriori
updated apriori to current functions

**2013 Mar 02**
Corrected Makefile
Deleted branch - generalize_metadata
removed deprecated headers

**2013 Mar 01**
Apriori Implementation: Show file suggestions while browsing

**2013 Feb 28**
fixed memory leaks in formatting strings in metadata
fixed memory leaks in freeind metadata structures
add apriori implementation for file suggestion

**2013 Feb 27**
fixed memory leaks on filesystem umount
plugin system through dynamic SO
modified sample Makefile
seperated files into git folders

**2013 Feb 26**
apriori working on kwest database
plugin system integrated
generalized metadata extraction format

**2013 Feb 25**
apriori working for sample dataset

**2013 Feb 21**
created static plugin structure
apriori algorithm implementation

**2013 Feb 16**
corrected group id and owner display - both are now current_user

**2013 Feb 07**
corrected datatypes for database tables

**2013 Feb 03**
fixed bug : Trying to redirect stderror to file in a non-existent folder
Commenting for Doxygen

**2013 Feb 02**