@@ -1,4 +1,5 @@
 **2013 Mar 19**
+Added Feature: Recursive metadata tag structure
 merged branch apriori
 merged branch generalize_matedata_table
 merged branch database_operations
